# sail-lsp

./: .gitignore  Cargo.toml  README.md
sail_parser/: Cargo.toml
sail_parser/examples/: error_samples.rs
sail_parser/src/: ast.rs  core_ast.rs  full_parser.rs  lexer.rs  lib.rs  parser.rs  queries.rs
sail_server/: Cargo.toml
sail_server/src/: analysis.rs  backend.rs  completion.rs  definitions.rs  formatting.rs  handlers.rs  hover.rs  inlay_hints.rs  main.rs  semantic_tokens.rs  tests.rs  typecheck.rs
sail_server/src/actions/: mod.rs
sail_server/src/diagnostics/: error_format.rs  mod.rs  parse.rs  reporting.rs  semantic.rs  type_error.rs
sail_server/src/hover/: mod.rs  support.rs
sail_server/src/state/: file.rs  files.rs  mod.rs  text_document.rs
sail_server/src/symbols/: analysis.rs  calls.rs  lenses.rs  mod.rs  navigation.rs  references.rs
src/: handlers.rs  main.rs  repl.rs  state.rs  utils.rs
