[package]
name = "sail-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
anyhow = "1.0"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
